[package]
name = "attiny85-blink"
version = "0.1.0"
edition = "2021"
authors = ["Sjoerd Simons <sjoerd@luon.net>"]
license = "MIT OR Apache-2.0"

[dependencies]
# A panic handler is needed.  This is a crate with the most basic one.
panic-halt = "0.2.0"
embedded-hal = "1.0"

[dependencies.attiny-hal]
git = "https://github.com/rahix/avr-hal"
features = ["attiny85", "rt"]

[profile.dev]
panic = "abort"
lto = "fat"
opt-level = "s"
codegen-units = 1

[profile.release]
opt-level = "s"
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
overflow-checks = false
panic="abort"
